[package]
name = "dirbuster-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.31"
indicatif = { version = "0.18.0", features = ["tokio"] }
once_cell = "1.21.3"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["cookies"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.46.1", features = ["full"] }
